# ai-research-assistant

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt  test.py  test_gemini.py
backend/api/routes/: auth.py  chat.py
backend/core/: database.py  dependencies.py  security.py  session_store.py
backend/db/chroma_db/: chroma.sqlite3
backend/models/: chat.py  message.py  user.py
backend/rag/: chain.py  ingest.py  retriver.py
backend/services/: llm_services.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
frontend/src/types/: chat.ts
